--- a/src/app/products/product-edit/product-edit.component.html
+++ b/src/app/products/product-edit/product-edit.component.html
@@ -1,4 +1,4 @@
-<div class="card" *ngIf="product$ as product">
+<div class="card" *ngIf="product$ | async as product">
   <div class="card-header">
     {{ pageTitle }}
   </div>
